--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "6.3.1",
-    "babel-core": "6.5.1",
-    "babel-loader": "6.2.2",
-    "babel-plugin-react-transform": "2.0.0",
-    "babel-preset-es2015": "6.5.0",
-    "babel-preset-react": "6.5.0",
-    "babel-register": "6.5.1",
-    "compression-webpack-plugin": "0.3.0",
-    "css-loader": "0.23.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "html-webpack-plugin": "2.8.1",
-    "jasmine-es6": "0.1.4",
-    "json-loader": "0.5.4",
-    "postcss-loader": "0.8.0",
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
-    "react-transform-hmr": "1.0.2",
-    "style-loader": "0.13.0",
-    "webdriverio": "4.0.3",
-    "webpack": "1.12.13",
-    "webpack-dev-server": "1.14.1"
+    "autoprefixer": "^6.3.2",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.5.1",
+    "compression-webpack-plugin": "^0.3.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.8.1",
+    "jasmine-es6": "^0.1.4",
+    "json-loader": "^0.5.4",
+    "postcss-loader": "^0.8.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-transform-hmr": "^1.0.2",
+    "style-loader": "^0.13.0",
+    "webdriverio": "^4.0.3",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
